ros2_ws/practice_ws/log/build_2022-04-01_14-44-19/py_pysub/stderr.log
  File "/home/kenan/practice1_ws/install/py_pysub/lib/python3.8/site-packages/py_pysub/publisher_member_function.py", line 27
    if(msg. != ""):
            ^
SyntaxError: invalid syntax

